[gd_scene load_steps=4 format=2]

[ext_resource path="res://Cell.gd" type="Script" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.545098, 0.396078, 0.105882, 1 )

[sub_resource type="CubeMesh" id=3]
material = SubResource( 2 )
size = Vector3( 1, 1, 0.1 )

[node name="Cell" type="Spatial"]
script = ExtResource( 1 )

[node name="FrontWall" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0.5 )
mesh = SubResource( 3 )

[node name="RightWall" type="MeshInstance" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.5, 0.5, 0 )
mesh = SubResource( 3 )

[node name="LeftWall" type="MeshInstance" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.5, 0.5, 0 )
mesh = SubResource( 3 )

[node name="BackWall" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -0.5 )
mesh = SubResource( 3 )
